release 1.6
- Adding support for Cobertura based code coverage measurement.
  Use following maven targets to compile, instrument, test and
  generate reports:
    mvn clean install -Dcobertura -Dmaven.test.skip=true
    mvn cobertura:cobertura -Dcobertura
- Fixed issue 643
  http://java.net/jira/browse/JERSEY-643
  Allowing users to use different client implementation in Jersey test
  framework. It might be done by providing ClientFactory and overriding
  method getClientFactory in JerseyTest, which respects priority of
  container provided client OR override getClient() method to gain
  absolute control.
- Provided a workaround for issue 639
  http://java.net/jira/browse/JERSEY-639
  Jersey allows to hack HttpURLConnection class and injects (via reflection)
  HTTP method which will be used to "method" field. This approach disables
  method name control which is used in setMethod method. Users have to set
  URLConnectionClientHandler.PROPERTY_HTTP_URL_CONNECTION_SET_METHOD_WORKAROUND
  property to true to activate this workaround. There is also one know
  limitation - request can't contain entity when this code is executed.
- Jackson dependency upgrade: 1.5.5 -> 1.7.1
- Fixed issue 626
  http://java.net/jira/browse/JERSEY-626
  Skipping the leading CRLF for the first boundary delimiter in multipart
  messages.
- Fixed issue 637
  http://java.net/jira/browse/JERSEY-637
  Jersey now adds a whitespace after the semicolon separating the content
  type parameters.
- Grizzly 2 http-server support moved from the experimental
  area to the new jersey-grizzly2 module in the com.sun.jersey space
- *Breaking change*: Grizzly 1 support in a separate module
  Grizzly 1 support used to be part of the jersey-server module
  This is no longer the case. If you rely on Grizzly 1 you will
  need to use the jersey-grizzly dependency instead of just jersey-server 
- Re-fixed issue 320
  http://java.net/jira/browse/JERSEY-320
  Interning document parser needs to be used because of JAXB.